fix margins on booking screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">CinemaTickets</string>
-    <string name="booking_screen_content">Lorem ipsum dolor sit amet consectetur. Porttitor eu lorem purus id netus. Venenatis ullamcorper sit amet id tempor odio.</string>
+    <string name="booking_screen_content">Lorem ipsum dolor sit amet consectetur. Porttitor eu lorem purus id netus. Venenatis ullamcorper sit amet id tempor odio. Lorem ipsum dolor sit amet consectetur.</string>
 </resources>
